[tool.poetry]
name = "url-routing"
version = "0.1.0"
description = ""
authors = ["meirdev <maornet@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
anytree = "^2.9.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
